# QTAppAlfaExercises

./: Adaptic.qss  CMakeLists.txt  Notes.md  README.md  Toolery.qss  bmi.cpp  comboboxfont.cpp  comboboxfont.h  comboboxfont.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintwidget.cpp  paintwidget.h  paintwidget.ui  resources.qrc  rssreader.cpp  rssreader.h  rssreader.ui  sporttimer.cpp  sporttimer.h  sporttimer.ui  sporttimerdatabase.cpp  sporttimerunittests.cpp  styleconfigure.cpp  styleconfigure.h  styleconfigure.ui  windowtwo.cpp  windowtwo.h  windowtwo.ui
